added more info

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,6 +1,6 @@
 footer
   .container.text-left
-    ul.float-right.list-inline.w-50.text-right
+    ul.float-right.list-inline.text-right
       li.list-inline-item
         a(href='https://github.com/kingsloi/community-airmonitor' target='_blank') I'm open source, create your own.
       li.list-inline-item.pl-3
