--- a/views/home.pug
+++ b/views/home.pug
@@ -5,9 +5,6 @@ block content
     .row
       .col-md-6
         h1.h2 Miller Beach / NWI Air Quality
-        p.lead.font-we We track #[a(href="https://www.epa.gov/pm-pollution/particulate-matter-pm-basics#PM" role="button" target="_blank")= "PM2.5, PM10"], temperature, humidity, pressure, and reported weather (including wind speeds, direction, cloud coverage, etc.), so we can (hopefully) determine who, where, what, and how the weather affects the quality of the air we breathe, from a community-funded air sensor in the scenic Miller neighborhood of Gary, Indiana.
-
-        p.lead In the future, depending on what data is openly available, we may be able to also gather data from the many industries around the area, such as train schedules, burn schedules, traffic throughput, construction, air traffic, mill non-conformances, shipping schedules, etc.
 
         .row
           .col-md-6.py-2
@@ -41,6 +38,12 @@ block content
                 h6.text-uppercase PM10
                 h1.display-4.font-weight-bold.mb-0 #{airshit.PM10REALTIME['aqi']}
                 p.x.lead.mb-0.pl-2.float-righat #{airshit.PM10REALTIME['category']}
+
+        p.lead.font-we We track #[a(href="https://www.epa.gov/pm-pollution/particulate-matter-pm-basics#PM" role="button" target="_blank")= "PM2.5, PM10"], temperature, humidity, pressure, and reported weather (including wind speeds, direction, cloud coverage, etc.), so we can (hopefully) determine who, where, what, and how the weather affects the quality of the air we breathe, from a community-funded air sensor in the scenic Miller neighborhood of Gary, Indiana.
+
+        p.lead In the future, depending on what data is openly available, we may be able to also gather data from the many industries around the area, such as train schedules, burn schedules, traffic throughput, construction, air traffic, mill non-conformances, shipping schedules, etc.
+
+        p.lead There are plenty of other pollutants in the air we're not tracking, such as SO₂, NO₂, CO to name a few. As soon as affordable ways of tracking this data becomes available, tracking pollutants in our neighbourhood, we'll track it and add it to our data.
 
       .col-md-6
         div.table-responsive
