--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   .container
     .row
-      .col-md-6
+      .col-xl-6
         h1.h2 Miller Beach / NWI Air Quality
 
         .row
@@ -45,7 +45,7 @@ block content
 
         p.lead There are plenty of other pollutants in the air we're not tracking, such as SO₂, NO₂, CO to name a few. As soon as affordable ways of tracking this data becomes available, tracking pollutants in our neighbourhood, we'll track it and add it to our data.
 
-      .col-md-6
+      .col-xl-6
         div.table-responsive
           table.table
             tbody
