--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ block content
       .col-xl-6
         h1.h2 Miller Beach / NWI Air Quality
 
-        .row
+        .row.mb-3
           .col-md-6.py-2
             .card.h-100.aqi(class={
               'aqi--good': airshit.PM25REALTIME['category'] === 'Good',
