--- a/views/home.pug
+++ b/views/home.pug
@@ -43,7 +43,7 @@ block content
 
         p.lead In the future, depending on what data is openly available, we may be able to also gather data from the many industries around the area, such as train schedules, burn schedules, traffic throughput, construction, air traffic, mill non-conformances, shipping schedules, etc.
 
-        p.lead There are plenty of other pollutants in the air we're not tracking, such as SO₂, NO₂, CO to name a few. As soon as affordable ways of tracking this data becomes available, tracking these pollutants in our right here, in our neighbourhood, we'll track it and add it to our data.
+        p.lead There are plenty of other pollutants in the air we're not tracking, such as SO₂, NO₂, CO to name a few. As soon as affordable ways of tracking this data becomes available, tracking these pollutants in our neighbourhood, we'll track it and add it to our data.
 
       .col-xl-6
         div.table-responsive
