--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -4,7 +4,7 @@ footer
       li.list-inline-item
         a(href='https://github.com/kingsloi/community-airmonitor' target='_blank') I'm open source, create your own.
       li.list-inline-item.pl-3
-        a(href='https://github.com/kingsloi/community-airmonitor/issues' target='_blank') Report Issues
+        a(href='https://github.com/kingsloi/community-airmonitor/issues' target='_blank') Issues
 
   .container
     p.made-with-love
