added trains to tracking

--- a/views/history-and-updates.pug
+++ b/views/history-and-updates.pug
@@ -15,7 +15,7 @@ block content
         tbody
           tr
             th 2019-10-11
-            td Cleared data
+            td Cleared data. Added Southshore train tracking.
           tr
             th 2019-10-10
             td Added site
