small updates such as pagination minifcation, readme

--- a/views/home.pug
+++ b/views/home.pug
@@ -158,6 +158,7 @@ block content
           li Kingsley
           li Kathy
           li Scott
+          li Beth
 
       .col-md-6
         h2.h4.text-uppercase.font-weight-light News / Links / Sources
