--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
     meta(name='Description' content='Miller Beach / NWI Air Quality')
     meta(name='theme-color' content='#4DA5F4')
     meta(name='csrf-token', content=_csrf)
-    title #{title} - Hackathon Starter
+    title #{title} - Community Air Monitor
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
     block head
