--- a/views/past.pug
+++ b/views/past.pug
@@ -119,11 +119,11 @@ block content
 
       nav(aria-label="past navigation")
         ul.pagination.pagination-md.justify-content-center
-          li.page-item(class= {disabled: currentPage==1})
+          li.page-item(class= {disabled: currentPage==0})
             a.page-link(href="/past?page="+(currentPage-1) tabindex="-1") Previous
-          - var p = 1;
+          - var p = 0;
           while p <= possiblePages.length
-            li.page-item(class= {active: currentPage == p} )
+            li.page-item(class= {active: currentPage == possiblePages[p]} )
               a.page-link(href="/past?page="+possiblePages[p])=possiblePages[p]
             - p++;
           li.page-item(class={disabled: currentPage == possiblePages.length})
