--- a/views/past.pug
+++ b/views/past.pug
@@ -126,5 +126,5 @@ block content
             li.page-item(class= {active: currentPage == possiblePages[p]} )
               a.page-link(href="/past?page="+possiblePages[p])=possiblePages[p]
             - p++;
-          li.page-item(class={disabled: currentPage == possiblePages.length})
+          li.page-item(class={disabled: currentPage == totalPages})
             a.page-link(href="/past?page="+ ++currentPage ) Next
