--- a/views/history-and-updates.pug
+++ b/views/history-and-updates.pug
@@ -15,7 +15,9 @@ block content
         tbody
           tr
             th 2019-10-11
-            td [Updated region boundries](https://github.com/kingsloi/community-airmonitor/commit/f1b38edcd50ecbc89c4a85791a304db30134ff2c#diff-9030a88ffb4a0007991f770d4d1feda6), to better match [https://en.wikipedia.org/wiki/Northwest_Indiana](https://en.wikipedia.org/wiki/Northwest_Indiana).
+            td 
+              | a(href='https://github.com/kingsloi/community-airmonitor/commit/f1b38edcd50ecbc89c4a85791a304db30134ff2c#diff-9030a88ffb4a0007991f770d4d1feda6' target='_blank') Updated region boundries
+              | to better match a(href='https://en.wikipedia.org/wiki/Northwest_Indiana' target='_blank') NWI.
           tr
             th 2019-10-11
             td Cleared data. Added Southshore train tracking.
